--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "cookie-parser": "^1.4.3",
     "cookie-session": "^2.0.0-beta.3",
     "express": "^4.15.4",
-    "iso-3166-1": "^1.1.0"
+    "iso-3166-1": "^1.1.0",
+    "mongoose": "^5.5.3"
   },
   "repository": {
     "type": "git",
